--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
-<html>
+<!--ICD2O Unit 2-02 HTML-->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="The math program" />
+    <meta name="keywords" content="ICD2O, mths" />
+    <meta name="author" content="Aimar Fernandez" />
+    <meta name="viewport" content="width+device-width, initial-scale=.1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.deep_orange-red.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <title>The Math Program</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <br />
+        <div class="mdl_layout__header-row">
+          <span class="mdl-layout-title">The Math Program</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div>
+          <img src="./images/area_and_perimeter.png" alt="Laptop Image" />
+        </div>
+        <br />
+        <div class="page-content">
+          The dimensions of a rectangle are: 5 cm and 3 cm.
+        </div>
+        <br />
+        <div class="page-content-answer">
+          <div id="area-answer">
+            <p>The area is:</p>
+          </div>
+          <div id="perimeter-answer">
+            <p>The perimeter is:</p>
+          </div>
+        </div>
+        <br />
+        <!-- Raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+          onclick="myButtonClicked()"
+          type="button"
+        >
+          Calculate
+        </button>
+        <br />
+      </main>
+    </div>
   </body>
 </html>
